# libft

./: .Makefile.swp  .gitignore  .libft.h.swp  .test_ctype.c.swp  .test_memcpy.c.swp  CMakeLists.txt  Makefile  Makefile1  build.zig  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_habibstr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isnum.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  (+66 more)
includes/: get_next_line.h  libft.h  libftprintf.h  printfarray.h
src/arr/: ft_arr.c  ft_arr_create.c  ft_arr_del.c  ft_arr_qsort.c  ft_arr_reverse.c  ft_array_1.c  ft_array_2.c  ft_array_3.c  ft_qsort.c
src/math/: ft_sqrtf.c
src/mem/: ft_swap.c
src/printf/: ft_printf_1.c  ft_printf_array_1.c  ft_printf_array_2.c  ft_printf_b.c  ft_printf_c.c  ft_printf_dispatcher.c  ft_printf_dp.c  ft_printf_flags.c  ft_printf_handle.c  ft_printf_nf.c  ft_printf_s.c  ft_printf_uox.c  libftprintf.h
src/str/: ft_log.c  ft_strjoinf.c
test/: test_bzero.c  test_mem.c  test_str.c  test_strlcat.c  test_strsplit.c
